--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
 	android:versionCode="900" 
 	android:installLocation="auto">
 	
-	<uses-sdk android:minSdkVersion="5" android:targetSdkVersion="10" />
+	<uses-sdk android:minSdkVersion="11" android:targetSdkVersion="17" />
 	
 	<supports-screens
 		android:largeScreens="true"
@@ -31,33 +31,38 @@
 	<uses-feature android:name="android.hardware.telephony" android:required="false" />
 	<uses-feature android:name="android.hardware.location.network" android:required="false" />
 	
-	<application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true" android:name=".presentation.activity.RemoteApplication">
+	<application
+	    android:name=".presentation.activity.RemoteApplication"
+	    android:debuggable="true"
+	    android:icon="@drawable/icon"
+	    android:label="@string/app_name"
+	    android:theme="@android:style/Theme.Holo" >
+
 		<activity android:name=".presentation.activity.HomeActivity"
-			android:label="@string/app_name"
-			android:theme="@android:style/Theme.NoTitleBar" >
+			android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		<activity android:name=".presentation.activity.RemoteActivity" android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
-		<activity android:name=".presentation.activity.MusicLibraryActivity" android:theme="@android:style/Theme.NoTitleBar" />
-		<activity android:name=".presentation.activity.MusicArtistActivity" android:theme="@android:style/Theme.NoTitleBar" />
-		<activity android:name=".presentation.activity.MusicGenreActivity" android:theme="@android:style/Theme.NoTitleBar" />
-		<activity android:name=".presentation.activity.MovieLibraryActivity" android:theme="@android:style/Theme.NoTitleBar" />
-		<activity android:name=".presentation.activity.MovieDetailsActivity" android:theme="@android:style/Theme.NoTitleBar" />
-		<activity android:name=".presentation.activity.TvShowDetailsActivity" android:theme="@android:style/Theme.NoTitleBar" />
-		<activity android:name=".presentation.activity.ListActivity" android:theme="@android:style/Theme.NoTitleBar" />
-		<activity android:name=".presentation.activity.GridActivity" android:theme="@android:style/Theme.NoTitleBar" />
-		<activity android:name=".presentation.activity.TvShowLibraryActivity" android:theme="@android:style/Theme.NoTitleBar" />
-		<activity android:name=".presentation.activity.NowPlayingActivity" android:theme="@android:style/Theme.NoTitleBar" />
-		<activity android:name=".presentation.activity.PlaylistActivity" android:theme="@android:style/Theme.NoTitleBar" />
-		<activity android:name=".presentation.activity.AboutActivity" android:theme="@android:style/Theme.NoTitleBar" android:screenOrientation="portrait"/>
-		<activity android:name=".presentation.activity.GestureRemoteActivity" android:theme="@android:style/Theme.NoTitleBar.Fullscreen" android:screenOrientation="portrait"/>
+		<activity android:name=".presentation.activity.RemoteActivity"/>
+		<activity android:name=".presentation.activity.MusicLibraryActivity"/>
+		<activity android:name=".presentation.activity.MusicArtistActivity"/>
+		<activity android:name=".presentation.activity.MusicGenreActivity"/>
+		<activity android:name=".presentation.activity.MovieLibraryActivity"/>
+		<activity android:name=".presentation.activity.MovieDetailsActivity"/>
+		<activity android:name=".presentation.activity.TvShowDetailsActivity"/>
+		<activity android:name=".presentation.activity.ListActivity"/>
+		<activity android:name=".presentation.activity.GridActivity"/>
+		<activity android:name=".presentation.activity.TvShowLibraryActivity"/>
+		<activity android:name=".presentation.activity.NowPlayingActivity"/>
+		<activity android:name=".presentation.activity.PlaylistActivity"/>
+		<activity android:name=".presentation.activity.AboutActivity" android:screenOrientation="portrait"/>
+		<activity android:name=".presentation.activity.GestureRemoteActivity" android:screenOrientation="portrait"/>
 		<activity android:name=".presentation.activity.SettingsActivity" />
 		<activity android:name=".presentation.activity.HostSettingsActivity" />
-		<activity android:name=".presentation.activity.EpisodeDetailsActivity" android:theme="@android:style/Theme.NoTitleBar" />
-		<activity android:name=".presentation.activity.MediaIntentActivity" android:theme="@android:style/Theme.NoTitleBar" android:label="@string/play_on_xbmc">
+		<activity android:name=".presentation.activity.EpisodeDetailsActivity"/>
+		<activity android:name=".presentation.activity.MediaIntentActivity" android:label="@string/play_on_xbmc">
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
 				<category android:name="android.intent.category.DEFAULT" />
@@ -69,7 +74,7 @@
 				<data android:scheme="http" android:host="www.youtube.com"/>
 			</intent-filter>
 		</activity>
-		<activity android:name=".presentation.activity.UrlIntentActivity" android:theme="@android:style/Theme.NoTitleBar" android:label="@string/play_on_xbmc">
+		<activity android:name=".presentation.activity.UrlIntentActivity" android:label="@string/play_on_xbmc">
 			<intent-filter>
 				<action android:name="android.intent.action.SEND"></action>
 				<category android:name="android.intent.category.DEFAULT"></category>
